--- a/app/src/main/res/layout/activity_cadastro_pessoa.xml
+++ b/app/src/main/res/layout/activity_cadastro_pessoa.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sistemas2014.unifebe.edu.br.emprestaai.Controller.CadastroPesssoa"
+    tools:context=".Controller.CadastroPesssoa"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -17,13 +17,13 @@
         android:layout_height="372dp"
         android:layout_weight="0.84">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="@string/person_name"
-            android:ems="10"
-            android:id="@+id/txtNome" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="@string/person_name"
+                android:ems="10"
+                android:id="@+id/txtNome" />
 
         <EditText
             android:layout_width="match_parent"
@@ -32,8 +32,6 @@
             android:ems="10"
             android:id="@+id/txtEmail"
             android:hint="@string/email" />
-
-
 
         <EditText
             android:layout_width="match_parent"
