--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -76,7 +76,7 @@
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
-                android:id="@+id/btnInformacoes"
+                android:id="@+id/btnItens"
                 android:src="@drawable/info" />
         </LinearLayout>
 
