--- a/app/src/main/res/layout/activity_consulta_pessoa.xml
+++ b/app/src/main/res/layout/activity_consulta_pessoa.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="sistemas2014.unifebe.edu.br.emprestaai.Consultas.ConsultaAmigo">
+    tools:context=".Controller.ConsultaPessoa">
 
     <ListView
         android:layout_width="wrap_content"
