--- a/app/src/main/res/layout/activity_cadastro_itens.xml
+++ b/app/src/main/res/layout/activity_cadastro_itens.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:context="sistemas2014.unifebe.edu.br.emprestaai.Controller.CadastroItens">
+    tools:context=".Controller.CadastroItens">
 
     <LinearLayout
         android:orientation="vertical"
