--- a/app/src/main/res/layout/activity_consulta_emprestimo.xml
+++ b/app/src/main/res/layout/activity_consulta_emprestimo.xml
@@ -8,10 +8,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="sistemas2014.unifebe.edu.br.emprestaai.Consultas.ConsultaEmprestimo">
+    tools:context=".Controller.ConsultaPessoa">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@android:id/list"/>
+
+    <TextView android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Nenhuma pessoa encontrada" />
 </LinearLayout>
