--- a/app/src/main/res/layout/activity_consulta_emprestimo.xml
+++ b/app/src/main/res/layout/activity_consulta_emprestimo.xml
@@ -10,6 +10,20 @@
     android:orientation="vertical"
     tools:context=".Controller.ConsultaPessoa">
 
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="51dp">
+
+        <Switch
+            android:text="Apenas Empréstimos em Aberto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/swiStatus"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
