--- a/app/src/main/res/layout/activity_detalhe_pessoa.xml
+++ b/app/src/main/res/layout/activity_detalhe_pessoa.xml
@@ -8,13 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".Controller.DetalhePessoa">
+    tools:context=".Controller.DetalhePessoa"
+    tools:gravity="center_horizontal">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="372dp"
-        android:layout_weight="0.84"
+        android:layout_weight="0.42"
         android:weightSum="1">
 
         <LinearLayout
@@ -216,5 +217,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
 </LinearLayout>
