--- a/app/src/main/res/layout/activity_consulta_emprestimo.xml
+++ b/app/src/main/res/layout/activity_consulta_emprestimo.xml
@@ -32,5 +32,5 @@
     <TextView android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Nenhuma pessoa encontrada" />
+        android:text="Nenhum empréstimo encontrado!" />
 </LinearLayout>
