--- a/app/src/main/res/layout/listview_consulta_emprestimo.xml
+++ b/app/src/main/res/layout/listview_consulta_emprestimo.xml
@@ -16,7 +16,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtPessoa"
             android:layout_width="fill_parent"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
+            android:textAlignment="center"/>
 
     </RelativeLayout>
     <RelativeLayout
@@ -30,7 +32,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtItem"
             android:layout_width="fill_parent"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
+            android:textAlignment="center"/>
 
     </RelativeLayout>
 
